# ableton-mcp-extended

./: .env.example  .gitignore  AI_MUSIC_PRODUCER_ROADMAP.md  AI_MUSIC_PRODUCER_SETUP.md  CRITICAL_RESTART_REQUIRED.md  INSTALLATION.md  INSTRUMENT_LOADING_FIX.md  INSTRUMENT_LOADING_FIX_SOLUTION.md  LICENSE  LIVE_11_NOTES.md  MCP_SERVER_ENHANCEMENTS.md  NEW_CHANGES.md  PULL_REQUEST_TEMPLATE.md  README.md  REMOTE_SCRIPT_INSTALLATION_GUIDE.md  chatleton_gpt.py  chatleton_web.py  demo_ai_music_producer.py  demo_backbeat.py  demo_enhanced_chatleton.py  diagnose_browser_content.py  enhanced_chatleton_mcp.py  enhanced_mcp_tools.py  install_remote_script.sh  launch_chatleton.py  mkdocs.yml  pyproject.toml  requirements.txt  simple_chatleton_test.py  test_ableton_integration.py  test_ai_expert.py  test_ai_producer.py  test_collaborative_experts.py  test_expert_system.py  test_generation_simple.py  test_instrument_loading_fix.py  test_scale_and_clip_fixes.py
.claude/commands/: ableton-songwriter.md
.github/: FUNDING.yml
.github/workflows/: build-test.yml  docs.yml
Ableton-MCP_hybrid-server/AbletonMCP_UDP/: __init__.py
AbletonMCP_Remote_Script/: __init__.py
AbletonMCP_UDP/: __init__.py
MCP_Server/: advanced_ableton_api.py  enhanced_server.py  plugin_aliases.py  server.py
docs/: api-reference.md  contributing.md  index.md  installation.md  quickstart.md  roadmap.md
docs/advanced/: custom-tools.md  elevenlabs.md  udp-server.md
docs/features/: browser.md  device-control.md  midi-clips.md  overview.md  session-control.md  track-management.md
elevenlabs_mcp/: model.py  server.py  utils.py
experimental_tools/xy_mouse_controller/: README.md  (+2 more)
music_intelligence/: __init__.py  ableton_integration.py  advanced_arrangement_engine.py  ai_coordination_manager.py  ai_experts.py  creative_brief_manager.py  enhanced_ai_orchestrator.py  gemini_orchestrator.py  instrument_manager.py  musical_coherence.py  performance_optimizer.py  quality_control_system.py  scale_constraint_system.py  stock_plugin_expert.py  style_analyzer.py
templates/: chat.html
tests/: conftest.py
(+18 files in other folders)
