[project]
name = "ableton-mcp"
version = "1.0.0"
description = "Ableton Live integration through the Model Context Protocol"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "uisato"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.3.0",
    "elevenlabs>=0.2.26",
    "python-dotenv>=1.0.0",
]

[project.scripts]
ableton-mcp = "MCP_Server.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["MCP_Server", "elevenlabs_mcp", "AbletonMCP_UDP"]

[project.urls]
"Homepage" = "https://github.com/uisato/ableton-mcp"
"Bug Tracker" = "https://github.com/uisato/ableton-mcp/issues"

[project.optional-dependencies]
xy_controller = [
    "pynput>=1.7.6",
    "screeninfo>=0.8.1",
]